force-app/main/default/objects/Prescription__c/Prescription__c.object-meta.xml
<CustomObject>
    <description>Stores patient prescription records and refill status for continuous health monitoring devices.</description>
    <label>Prescription</label>
    <nameField>
        <label>Prescription Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prescriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>