force-app/main/default/objects/Prescription__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <description>Expiration date of the prescription.</description>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>