force-app/main/default/objects/Prescription__c/fields/Medication_Name__c.field-meta.xml
<CustomField>
    <fullName>Medication_Name__c</fullName>
    <description>Name of the medication or health monitoring device/system prescribed.</description>
    <label>Medication / Device Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>