force-app/main/default/objects/Prescription__c/fields/Prescribing_Doctor__c.field-meta.xml
<CustomField>
    <fullName>Prescribing_Doctor__c</fullName>
    <description>Name and clinic/specialty of the prescribing healthcare provider.</description>
    <label>Prescribing Doctor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>