force-app/main/default/objects/Prescription__c/fields/Prescription_Number__c.field-meta.xml
<CustomField>
    <fullName>Prescription_Number__c</fullName>
    <description>External or pharmacy prescription identification number.</description>
    <label>Prescription Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>