force-app/main/default/objects/Prescription__c/fields/Refills_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Refills_Remaining__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of authorized refills remaining for this prescription.</description>
    <label>Refills Remaining</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>